--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>lesson2</module>
         <module>lesson3</module>
         <module>lesson4</module>
+        <module>lesson5</module>
     </modules>
 
     <properties>
